maze.lessons.maze.island.IslandMaze.scala.error
Escaper:15: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  gauche()
  ^Escaper:16: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (estFaceMur()){
  ^